@@ -151,6 +151,9 @@ Lintian-Tags:
 Fix-Script: dh-quilt-addon-but-quilt-source-format.py
 Lintian-Tags: dh-quilt-addon-but-quilt-source-format
 
+Fix-Script: missing-build-dependency-for-dh_-command.py
+Lintian-Tags: missing-build-dependency-for-dh_-command
+
 Fix-Script: missing-vcs-browser-field.py
 Lintian-Tags: missing-vcs-browser-field
 
